<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CyanogenMod settings</string>
    <string name="application_settings_title_head">Application</string>
    <string name="application_settings_title_subhead">Application settings</string>
    <string name="application_settings_summary_head">Application moving, install location, communication filtering</string>
    <string name="display_settings_title_head">Display</string>
    <string name="display_settings_title_subhead">Display settings</string>
    <string name="display_settings_summary_head">Display backlight, animations, rotation</string>
    <string name="display_settings_summary_head_nobacklight">Display animations, rotation</string>
    <string name="input_settings_title_head">Input</string>
    <string name="input_settings_title_subhead">Input settings</string>
    <string name="input_settings_summary_head">Input behavior, buttons, haptic feedback</string>
    <string name="interface_settings_title_head">Interface</string>
    <string name="interface_settings_summary_head">Interface tweaks, overscrolling, render effect</string>
    <string name="lockscreen_settings_title_head">Lockscreen</string>
    <string name="lockscreen_settings_title_subhead">Lockscreen settings</string>
    <string name="lockscreen_settings_summary_head">Lockscreen gestures, style, unlock options</string>
    <string name="performance_settings_title_head">Performance</string>
    <string name="performance_settings_title_subhead">Performance settings</string>
    <string name="performance_settings_summary_head">Performance tweaks, JIT, VM heap size</string>
    <string name="sound_settings_title_head">Sound</string>
    <string name="sound_settings_title_subhead">Sound settings</string>
    <string name="sound_settings_summary_head">Sound volumes, audio focus, quiet hours</string>
    <string name="system_settings_title_head">System</string>
    <string name="system_settings_title_subhead">System settings</string>
    <string name="system_settings_summary_head">System changelog, stats, update notifications</string>
    <string name="updatenotify_title">Update notifications</string>
    <string name="updatenotify_summary">Get push notifications of updates</string>
    <string name="ui_title">User interface</string>
    <string name="pref_electron_beam_animation_on">Screen-on animation</string>
    <string name="pref_electron_beam_animation_off">Screen-off animation</string>
    <string name="pref_rotation_animation_title">Rotation animation</string>
    <string name="pref_rotation_animation_summary">Requires a reboot</string>
    <string name="tablet_tweaks_title_head">Tablet tweaks</string>
    <string name="tablet_tweaks_summary_head">Settings most useful for tablet devices collected in one place. Also working for phones</string>
    <string name="tablet_tweaks_sb_bottom_title">Bottom status bar</string>
    <string name="tablet_tweaks_sb_bottom_summary">Show status bar on bottom. Useful for tablets which use soft-buttons for home, menu, etc on status bar</string>
    <string name="tablet_tweaks_status_bar_dead_zone_title">Dead zone</string>
    <string name="tablet_tweaks_status_bar_dead_zone_summary">Add a dead zone of half screen width to the middle of the status bar</string>
    <string name="tablet_tweaks_soft_buttons_left_title">Soft-buttons left</string>
    <string name="tablet_tweaks_soft_buttons_left_summary">Put soft-buttons on left side of status bar</string>
    <string name="tablet_tweaks_soft_button_list_title">Choose soft-buttons</string>
    <string name="tablet_tweaks_interface_head">Interface</string>
    <string name="tablet_tweaks_disable_lockscreen_title">Disable lockscreen</string>
    <string name="tablet_tweaks_disable_lockscreen_summary">When enabled, does not show the lockscreen or pattern screen. Neither on boot, nor when waking the device</string>
    <string name="tablet_tweaks_disable_fullscreen_title">Disable fullscreen</string>
    <string name="tablet_tweaks_disable_fullscreen_summary">Override the fullscreen request of applications. When enabled, status bar is always visible until hidden by button</string>
    <string name="tablet_tweaks_unhide_button_list_head">Unhide button</string>
    <string name="tablet_tweaks_unhide_button_list_title">Choose unhide button</string>
    <string name="tablet_tweaks_extend_pm_title">Extend power menu</string>
    <string name="tablet_tweaks_extend_pm_summary">Add home/back/menu actions to the power menu</string>
    <string name="tablet_tweaks_extend_pm_list_title">Choose power menu buttons</string>
    <string name="tablet_tweaks_reverse_volume_behavior_title">Volume behavior reverse</string>
    <string name="tablet_tweaks_reverse_volume_behavior_summary_off">Volume buttons behave normal. Press for volume change, long press for user action</string>
    <string name="tablet_tweaks_reverse_volume_behavior_summary_on">Volume buttons behave reversed. Press for user action, long press for volume change</string>
    <string name="tablet_tweaks_input_head">Remap volume keys</string>
    <string name="tablet_tweaks_long_volp_action_title">Long press volume up</string>
    <string name="tablet_tweaks_long_volp_action_summary">Assign home/back/menu/etc action to volume button up long press. Limited to screen on</string>
    <string name="tablet_tweaks_long_volm_action_title">Long press volume down</string>
    <string name="tablet_tweaks_vol_both_action_title">Both volume buttons</string>
    <string name="tablet_tweaks_vol_both_action_summary">Note: Some devices do a hard wired reset on both volume buttons+power pressed</string>
    <string name="tablet_tweaks_long_vol_both_action_title">Long press both volume buttons</string>
    <string name="tablet_tweaks_extend_pm_list_head">Power menu buttons</string>
    <string name="tablet_tweaks_soft_buttons_list_head">Soft-buttons</string>
    <string name="tablet_soft_buttons_home_title">Home</string>
    <string name="tablet_soft_buttons_menu_title">Menu</string>
    <string name="tablet_soft_buttons_back_title">Back</string>
    <string name="tablet_soft_buttons_search_title">Search</string>
    <string name="tablet_soft_buttons_quick_na_title">Quick notifications</string>
    <string name="rotation_category_title">Accelerometer rotation</string>
    <string name="pref_rotation_0_title">0 degrees</string>
    <string name="pref_rotation_90_title">90 degrees</string>
    <string name="pref_rotation_180_title">180 degrees</string>
    <string name="pref_rotation_270_title">270 degrees</string>
    <string name="ui_status_bar_title">Status bar tweaks</string>
    <string name="ui_status_bar_am_pm_title">AM/PM style</string>
    <string name="ui_status_bar_am_pm_summary">Display style of AM/PM next to clock</string>
    <string name="ui_status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="ui_status_bar_clock_title">Show clock</string>
    <string name="ui_status_bar_clock_summary">Status bar clock will be hidden, if disabled</string>
    <string name="ui_status_bar_centerclock_title">Center clock</string>
    <string name="ui_status_bar_centerclock_summary">Clock will be centered if checked. Uncheck to move to the right.</string>
    <string name="ui_status_bar_clockcolor_title">Clock color</string>
    <string name="ui_status_bar_clockcolor_summary">ffffffff</string>
    <string name="ui_status_bar_alarm_title">Show alarm icon</string>
    <string name="ui_status_bar_alarm_summary">Status bar alarm icon will be hidden, if disabled</string>
    <string name="ui_status_bar_battery_title">Battery status style</string>
    <string name="ui_status_bar_battery_summary">Display style of battery status</string>
    <string name="ui_status_bar_battery_color_title">Status bar battery color</string>
    <string name="ui_status_bar_battery_color_summary">Color to use for the status bar battery style</string>
    <string name="ui_status_bar_compact_carrier_title">Compact carrier label</string>
    <string name="ui_status_bar_compact_carrier_summary">Use alternate notification dropdown layout with mini carrier label</string>
    <string name="ui_status_bar_carrier_label_title">Carrier label type</string>
    <string name="ui_status_bar_carrier_label_summary">Change what is used as carrier label</string>
    <string name="ui_status_bar_carrier_label_use_default">Default</string>
    <string name="ui_status_bar_carrier_label_use_spn">Show SPN</string>
    <string name="pref_compcache_title">Compcache RAM Usage</string>
    <string name="pref_compcache_summary">Compress memory for increased virtual capacity (requires reboot)</string>
    <string name="pref_jit_mode_title">Use JIT</string>
    <string name="pref_jit_mode_summary">Use the Dalvik just-in-time compiler (requires reboot)</string>
    <string name="pref_use_dithering_title">Enable surface dithering</string>
    <string name="pref_use_dithering_summary">Dithering surfaces improves image quality at the cost of performance (requires reboot)</string>
    <string name="pref_use_16bpp_alpha_title">Use 16bit transparency</string>
    <string name="pref_use_16bpp_alpha_summary">Using 16bit transparency can improve scrolling performance, but may cause visual artifacts (requires reboot)</string>
    <string name="pref_scrollingcache_title">Scrolling cache</string>
    <string name="pref_scrollingcache_summary">Scrolling cache may improve scrolling performance at the cost of memory</string>
    <string name="pref_purgeable_assets_title">Allow purging of assets</string>
    <string name="pref_purgeable_assets_summary">System can free more RAM when needed if asset bitmap memory can be reclaimed (requires reboot)</string>
    <string name="pref_heapsize_title">VM heap size</string>
    <string name="pref_heapsize_summary">Maximum amount of memory per VM heap (requires reboot)</string>
    <string name="pref_disable_bootanimation_title">Disable boot animation</string>
    <string name="pref_disable_bootanimation_summary">Don\'t show the boot animation for faster boot</string>
    <string name="pref_lock_home_title">Lock home in memory</string>
    <string name="pref_lock_home_summary">Attempt to keep the current home app in memory at all times</string>
    <string name="pref_lock_mms_title">Lock messaging app in memory</string>
    <string name="pref_lock_mms_summary">Avoid lost messages on low memory situations</string>
    <string name="cpu_title">CPU settings</string>
    <string name="cpu_summary">Governor and clock settings</string>
    <string name="pref_gmaps_hack_title">GMAPS hack</string>
    <string name="pref_gmaps_hack_summary">Make NetworkLocationService killable. Frees some RAM, but Latitude isn\'t reporting location any more (requires restart of Maps)</string>
    <string name="pref_iosched_title">IO Scheduler</string>
    <string name="pref_iosched_summary">Choice IO scheduler (requires reboot)</string>
    <string name="pref_lowmemkill_title">Low Mem Killer</string>
    <string name="pref_lowmemkill_summary">Option for Low Mem Killer</string>
    <string name="kernel_title">CPU and IO Tweakings</string>
    <string name="mem_title">Memory and VM Tweakings</string>
    <string name="misc_title">Misc Tweakings</string>
    <string name="pref_ksm_title">Kernel samepage merging</string>
    <string name="pref_ksm_summary">KSM reduces physical memory requirements and improves performance</string>
    <string name="pref_ksm_sleep_title">KSM Sleep time</string>
    <string name="pref_ksm_sleep_summary">KSM Sleep time option (improves performance)</string>
    <string name="pref_ksm_scan_title">KSM Page scan</string>
    <string name="pref_ksm_scan_summary">KSM Page scan option (improves performance)</string>
    <string name="pref_sd_readahead_title">SD Read Ahead Size</string>
    <string name="pref_sd_readahead_summary">Size of the SD Read Ahead Cache</string>
</resources>